tests/NormalTests/paczka1/fuzzy1/17085886.err
Error in line 3: S763 S692 8,2
Error in line 6: Fur A782 19,3
Error in line 14: FmqV5QKhhHY S692 41,0
Error in line 16: FmqV5QKhhHY A7Ä2 1Ä1,2
Error in line 33: S763 A782 82,5
Error in line 38: ?S*15
Error in line 34: S763 S763 38,3
